; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_write_sltg.c_init_sltg_data.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_write_sltg.c_init_sltg_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sltg_data = type { i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sltg_data*)* @init_sltg_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_sltg_data(%struct.sltg_data* %0) #0 {
  %2 = alloca %struct.sltg_data*, align 8
  store %struct.sltg_data* %0, %struct.sltg_data** %2, align 8
  %3 = load %struct.sltg_data*, %struct.sltg_data** %2, align 8
  %4 = getelementptr inbounds %struct.sltg_data, %struct.sltg_data* %3, i32 0, i32 2
  store i64 0, i64* %4, align 8
  %5 = load %struct.sltg_data*, %struct.sltg_data** %2, align 8
  %6 = getelementptr inbounds %struct.sltg_data, %struct.sltg_data* %5, i32 0, i32 0
  store i32 16, i32* %6, align 8
  %7 = call i32 @xmalloc(i32 16)
  %8 = load %struct.sltg_data*, %struct.sltg_data** %2, align 8
  %9 = getelementptr inbounds %struct.sltg_data, %struct.sltg_data* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  ret void
}

declare dso_local i32 @xmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
